apps/website/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website-httproute
spec:
  parentRefs:
    - name: public-gateway
      namespace: networking
  hostnames:
    - "thdxg.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: website
          port: 80
